Update code font

--- a/_posts/2024-02-07-Redis SET 명령어.md
+++ b/_posts/2024-02-07-Redis SET 명령어.md
@@ -46,39 +46,39 @@ redis> GET anotherkey
 
 ## Code Example
 
-```go
+{% highlight ruby %}
 package example_commands_test
 
 import (
-	"context"
-	"fmt"
-
-	"github.com/redis/go-redis/v9"
+    "context"
+    "fmt"
+    "github.com/redis/go-redis/v9"
 )
 
 func ExampleClient_Set_and_get() {
-	ctx := context.Background()
+    ctx := context.Background()
 
-	rdb := redis.NewClient(&redis.Options{
-		Addr:     "localhost:6379",
-		Password: "", // no password docs
-		DB:       0,  // use default DB
-	})
+    rdb := redis.NewClient(&redis.Options{
+    	Addr:     "localhost:6379",
+    	Password: "", // no password docs
+    	DB:       0,  // use default DB
+    })
 
-	err := rdb.Set(ctx, "bike:1", "Process 134", 0).Err()
-	if err != nil {
-		panic(err)
-	}
+    err := rdb.Set(ctx, "bike:1", "Process 134", 0).Err()
+    if err != nil {
+    	panic(err)
+    }
 
-	fmt.Println("OK")
+    fmt.Println("OK")
 
-	value, err := rdb.Get(ctx, "bike:1").Result()
-	if err != nil {
-		panic(err)
-	}
-	fmt.Printf("The name of the bike is %s", value)
+    value, err := rdb.Get(ctx, "bike:1").Result()
+    if err != nil {
+    	panic(err)
+    }
+    fmt.Printf("The name of the bike is %s", value)
+
 }
-```
+{% endhighlight %}
 
 ## 만료 옵션 사용 사례
 
