post: Redis 로컬 설정

--- a/_posts/2024-02-12-Redis 기타 명령어 및 사용 패턴.md
+++ b/_posts/2024-02-12-Redis 기타 명령어 및 사용 패턴.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Redis 기타 명령어 및 사용 패턴"
+title: "[Redis] 기타 명령어 및 사용 패턴"
 date: 2024-02-11 15:00:00
 categories: Redis
 ---
