--- a/_posts/2024-02-06-Redis 초기 설정 및 기본 명령어.md
+++ b/_posts/2024-02-06-Redis 초기 설정 및 기본 명령어.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Redis 초기 설정 및 기본 명령어"
+title: "[Redis] 초기 설정 및 기본 명령어"
 date: 2024-02-05 15:00:00
 categories: Redis
 ---
