post: 하드디스크와 비교하여 알아보는 SSD

--- a/_posts/2024-02-13-메모리와 하드디스크 속도 차이 이유.md
+++ b/_posts/2024-02-13-메모리와 하드디스크 속도 차이 이유.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "메모리와 하드디스크 속도 차이 이유"
+title: "[HW] 메모리와 하드디스크 속도 차이 이유"
 date: 2024-02-12 15:00:00
 categories: Hardware
 ---
