--- a/_posts/2024-02-05-Redis를 사용해야하는 이유.md
+++ b/_posts/2024-02-05-Redis를 사용해야하는 이유.md
@@ -11,7 +11,7 @@ Redis는 오픈 소스인 메모리 기반 데이터 스토어이다. 주로 데
 
 ## Redis의 주요 장점
 
-- 속도와 성능: Redis는 데이터를 메모리에 저장하고 **빠르게** 액세스할 수 있어서 매우 빠른 응답 시간을 제공한다. 이러한 이점 때문에 데이터베이스 쿼리를 실행하는 데 걸리는 시간을 줄이고, 실시간 데이터 처리가 필요한 웹 애플리케이션과 같은 곳에서 유용하게 사용할 수 있다.
+- 속도와 성능: Redis는 데이터를 메모리에 저장하고 <span class="important">빠르게</span> 액세스할 수 있어서 매우 빠른 응답 시간을 제공한다. 이러한 이점 때문에 데이터베이스 쿼리를 실행하는 데 걸리는 시간을 줄이고, 실시간 데이터 처리가 필요한 웹 애플리케이션과 같은 곳에서 유용하게 사용할 수 있다.
 
 - 다양한 데이터 구조: Redis는 문자열, 해시, 리스트, 집합, 정렬된 집합 등 다양한 데이터 구조를 지원한다. 이러한 다양한 구조로 여러 가지 사용 사례에 적합하고, 캐싱, 세션 관리, 메시지 브로커, 리더보드 등에 활용할 수 있다.
 
@@ -21,7 +21,7 @@ Redis는 오픈 소스인 메모리 기반 데이터 스토어이다. 주로 데
 
 ## Redis는 왜 빠를까?
 
-1. 모든 데이터가 **메모리에** 저장된다.
+1. 모든 데이터가 <span class="important">메모리에</span> 저장된다.
 
    - 대부분의 데이터베이스는 정보를 컴퓨터의 메모리와 하드 드라이브에 저장한다.
    - 메모리의 데이터는 빠르게 액세스할 수 있지만 하드 디스크의 데이터를 액세스하는 것은 비교적 느리다.
