--- a/_posts/2024-02-07-Redis SET 명령어.md
+++ b/_posts/2024-02-07-Redis SET 명령어.md
@@ -82,7 +82,7 @@ func ExampleClient_Set_and_get() {
 
 ## 만료 옵션 사용 사례
 
-Redis의 대표적인 용도는 **캐싱**이다!
+Redis의 대표적인 용도는 <<span class="important">캐싱</span>이다!
 오래된 데이터를 캐싱해 유지하는 것을 막고 메모리가 부족하지 않도록 데이터를 삭제하는 것이다.
 
 - 뉴스 헤드라인 API 캐싱
