--- a/_posts/2024-02-21-하드디스크와 비교하여 알아보는 SSD.md
+++ b/_posts/2024-02-21-하드디스크와 비교하여 알아보는 SSD.md
@@ -8,16 +8,16 @@ categories: Hardware
 ---
 
 ## SSD(Solid State Drive)란
-- 하드디스크를 대체하는 고속의 **보조기억장치**이다. 하드디스크의 한계를 극복하기 위해 SSD가 등장하였다고 할 수 있다.
-- SSD는 HDD와 달리 자기디스크가 아닌 **반도체**를 이용해 데이터를 저장한다. 이러한 특성 덕분에 SSD는 HDD보다 **빠른 속도**로 데이터의 읽기나 쓰기가 가능하다.
-- 물리적으로 움직이는 부품이 없기 때문에 작동 **소음이 없으며 전력소모도 적다**. 이런 특성 덕분에 휴대용 컴퓨터에 SSD를 사용하면 배터리 유지시간을 늘릴 수 있다는 이점이 있다.
+- 하드디스크를 대체하는 고속의 <span class="important">보조기억장치</span>이다. 하드디스크의 한계를 극복하기 위해 SSD가 등장하였다고 할 수 있다.
+- SSD는 HDD와 달리 자기디스크가 아닌 <span class="important">반도체</span>를 이용해 데이터를 저장한다. 이러한 특성 덕분에 SSD는 HDD보다 <span class="important">빠른 속도</span>로 데이터의 읽기나 쓰기가 가능하다.
+- 물리적으로 움직이는 부품이 없기 때문에 작동 <span class="important">소음이 없으며 전력소모도 적다</span>. 이런 특성 덕분에 휴대용 컴퓨터에 SSD를 사용하면 배터리 유지시간을 늘릴 수 있다는 이점이 있다.
 
 ---
 
 ## SSD 분류
-- 램 기반 모델과 플래시메모리 기반의 모델이 있는데, 일반적으로 SSD는 **플래시메모리** 기반의 모델을 지칭한다. 
+- 램 기반 모델과 플래시메모리 기반의 모델이 있는데, 일반적으로 SSD는 <span class="important">플래시메모리</span> 기반의 모델을 지칭한다. 
 - 램은 전원이 꺼지면 저장 데이터가 모두 사라지기 때문에 PC의 전원을 끈 상태에서도 SSD에 지속적으로 전원을 공급해주는 전용 배터리를 필수적으로 갖춰야 한다. 만약 PC가 꺼진 상태에서 SSD에 연결된 배터리마저 방전된다면 모든 데이터가 지워진다. 이런 단점 때문에 램 기반의 SSD는 그다지 쓰이지 않는다.
-- **플래시메모리는 전원이 꺼지더라도 기록된 데이터가 보존** 되기 때문에 기존의 HDD와 같은 감각으로 사용이 가능하여 편리하다. 속도 면에서는 램 기반의 SSD에 비해 느리긴 하지만 HDD에 비하면 빠르다. 플래시메모리 기반의 SSD를 장착한 PC는 HDD를 장착한 동급 사양의 PC에 비해 최소 2~3배 이상 빠른 운영체제 부팅 속도나 프로그램 실행 속도를 기대할 수 있다.
+- <span class="important">플래시메모리는 전원이 꺼지더라도 기록된 데이터가 보존</span> 되기 때문에 기존의 HDD와 같은 감각으로 사용이 가능하여 편리하다. 속도 면에서는 램 기반의 SSD에 비해 느리긴 하지만 HDD에 비하면 빠르다. 플래시메모리 기반의 SSD를 장착한 PC는 HDD를 장착한 동급 사양의 PC에 비해 최소 2~3배 이상 빠른 운영체제 부팅 속도나 프로그램 실행 속도를 기대할 수 있다.
 
 ---
 
@@ -25,7 +25,7 @@ categories: Hardware
 
 | 특징                  | SSD (Solid State Drive)                  | 하드디스크 (Hard Disk Drive)               |
 |-----------------------|-----------------------------------------|-------------------------------------------|
-| 작동 원리             | **플래시 메모리**를 사용하여 데이터를 저장하고 읽고 쓴다. 플래시 메모리는 **전기적 신호**를 사용하여 데이터를 저장하고 읽고 쓴다. | 회전하는 디스크(플래터)와 이동하는 헤드로 이루어져 있다. 데이터는 디스크의 표면에 **자기적으로 기록**된다. 디스크는 고속으로 회전하며, 헤드는 디스크의 표면 위를 움직여 데이터를 읽고 쓴다.    |
+| 작동 원리             | <span class="important">플래시 메모리</span>를 사용하여 데이터를 저장하고 읽고 쓴다. 플래시 메모리는 <span class="important">전기적 신호</span>를 사용하여 데이터를 저장하고 읽고 쓴다. | 회전하는 디스크(플래터)와 이동하는 헤드로 이루어져 있다. 데이터는 디스크의 표면에 <span class="important">자기적으로 기록</span>된다. 디스크는 고속으로 회전하며, 헤드는 디스크의 표면 위를 움직여 데이터를 읽고 쓴다.    |
 | 속도                  | 일반적으로 빠른 읽기/쓰기 속도를 제공한다. 액세스 속도가 빠르다. 파일 및 애플리케이션을 빠르게 로드한다. | 상대적으로 느린 읽기/쓰기 속도를 가지고 있다. 액세스 속도가 느리다. 파일 및 애플리케이션을 로드하는 데 시간이 걸릴 수 있다.            |
 | 내구성                | 하드디스크보다 내구성이 높다. SSD에는 움직이는 부품이 없으므로 충격이나 진동에 강하다. | 회전하는 부품을 사용하기 때문에 충격이나 진동에 민감하다. 디스크의 회전 속도와 헤드의 움직임 때문에 손상될 수 있다.               |
 | 소음 및 발열          | 소음이 없으며 발열이 적다. | 디스크의 회전과 헤드의 움직임으로 인해 소음이 발생하며, 디스크의 회전에 의한 발열이 있을 수 있다.          |
