post: 자료구조-해시 테이블(Hash Tables)

--- a/_posts/2024-03-23-해시 테이블.md
+++ b/_posts/2024-03-23-해시 테이블.md
@@ -128,7 +128,7 @@ categories: 자료구조
 - 충돌 발생 시, 해시값에 제곱 연산을 수행하여 다음 위치를 찾는 방법이다.
 - 이중 해시보다 클러스터링 현상을 더욱 줄일 수 있지만, 계산량이 더 많이 증가한다.
 
-### 체이닝 (Chaining)
+### 체이닝(Chaining)
 
 해시 충돌 발생 시, 연결 리스트를 사용하여 데이터를 관리하는 방법이다.
 
@@ -139,6 +139,125 @@ categories: 자료구조
 #### 완전 해시(Perfect Hashing)
 
 모든 키에 대해 충돌이 발생하지 않는 해시 함수를 사용하는 방법이다. 충돌이 발생하지 않으므로 검색 속도가 빠르지만, 완전 해시 함수를 찾는 것이 어렵고 해시 테이블 크기가 커질 수 있다.
+
+---
+
+## 구현 예시
+
+- 체이닝으로 구현 예시
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+// 해시 테이블 항목
+type Entry struct { 
+	Key   string
+	Value interface{}
+	Next  *Entry
+}
+
+// 해시 테이블
+type HashTable struct {
+	buckets []*Entry    // 해시 테이블 버킷 저장
+	size int    // 해시 테이블 크기
+}
+
+func NewHashTable(size int) *HashTable {
+	return &HashTable{
+		buckets: make([]*Entry, size),
+		size:    size,
+	}
+}
+
+// 문자열 키를 해시 값으로 변환
+func Hash(key string) int { 
+	hash := 0
+	for _, char := range key {
+		hash = 37 * hash + int(char)
+	}
+	return hash % len(buckets)
+}
+
+// 해시 테이블에 키-값 쌍을 추가
+func (h *HashTable) Set(key string, value interface{}) { 
+	// 해시 값 계산
+	hash := Hash(key)
+
+	// 충돌 처리
+	if h.buckets[hash] != nil {
+		current := h.buckets[hash]   // 연결 리스트에 새 항목 추가
+		for current.Next != nil {
+			current = current.Next
+		}
+		current.Next = &Entry{Key: key, Value: value}
+	} else {
+		h.buckets[hash] = &Entry{Key: key, Value: value}    // 새 항목 추가
+	}
+}
+
+// 해시 테이블에서 키에 대한 값 조회
+func (h *HashTable) Get(key string) interface{} {   
+	// 해시 값 계산
+	hash := Hash(key)
+
+	// 키 검색
+	current := h.buckets[hash]
+	for current != nil {
+		if current.Key == key {
+			return current.Value
+		}
+		current = current.Next
+	}
+	return nil
+}
+
+// 해시 테이블에서 키에 대한 항목을 삭제
+func (h *HashTable) Delete(key string) {    
+	// 해시 값 계산
+	hash := Hash(key)
+
+	// 이전 항목과 현재 항목
+	var prev *Entry
+	current := h.buckets[hash]
+
+	// 키 검색 및 삭제
+	for current != nil {
+		if current.Key == key {
+			if prev == nil {
+				// 첫 번째 항목 삭제
+				h.buckets[hash] = current.Next
+			} else {
+				// 연결 리스트에서 항목 삭제
+				prev.Next = current.Next
+			}
+			break
+		}
+		prev = current
+		current = current.Next
+	}
+}
+
+func main() {
+	table := NewHashTable(10)
+	table.Set("key1", "value1")
+	table.Set("key2", "value2")
+	table.Set("key3", "value3")
+
+	value1 := table.Get("key1")
+	fmt.Println(value1) // "value1"
+
+	exists := table.Get("key4") != nil
+	fmt.Println(exists) // false
+
+	table.Delete("key2")
+
+	fmt.Println(len(table.buckets)) // 10
+}
+```
 
 ---
 
